--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="color-scheme" content="dark light">
     <title>Сложно сосредоточиться</title>
     <link rel="icon" href="./images/favicon.ico" type="image/x-icon">
@@ -50,9 +50,9 @@
     </header>
 
     <main class="main">
-      <section class="main__why">
+      <section class="section main__why">
         <h2 class="main__title">Почему сосредоточиться так сложно</h2>
-        <div class="why__content">
+        <div class="section__content why__content">
           <h3 class="main__subtitle title-decor">Многозадачность</h3>
           <p class="main__text">Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же легендарная многозадачность, когда она так
             нужна вам (и всем нанимающим менеджерам этого мира)? А дело в том, что её просто не существует. Исследователи <a class="text-link" href="https://pmc.ncbi.nlm.nih.gov/articles/PMC7075496/">выяснили</a>,
@@ -68,9 +68,9 @@
         </div>
       </section>
 
-      <section class="main__what">
+      <section class="section main__what">
         <h2 class="main__title">Что снижает концентрацию внимания?</h2>
-        <div class="what__content">
+        <div class="section__content what__content">
           <div class="content_item">
             <h3 class="main__subtitle title-decor">Многозадачность</h3>
             <p class="main__text">Как концентрация может снижаться из-за… концентрации? Любая стрессовая ситуация (и резко меняющийся мир в целом)
@@ -94,11 +94,11 @@
           </div>
       </section>
 
-      <section class="main__how">
+      <section class="section main__how">
         <h2 class="main__title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
-        <div class="how__content">
+        <div class="section__content how__content">
           <h3 class="main__subtitle title-decor">5 простых (на самом деле не очень) советов</h3>
-          <h3 class="main__subtitle main__subtitle-normal title-decor">Представьте небо и облака</h3>
+          <h4 class="main__subtitle main__subtitle-normal title-decor">Представьте небо и облака</h4>
           <p class="main__text">Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. Ведь часто именно тревожные мысли о
             сложных задачах как раз и мешают эти сложные задачи делать. В такие моменты можно закрыть глаза и представить, что
             чистое небо — это вы, а облака — тревожные мысли. И сколько бы их ни было — ясное небо всегда будет где-то там, за
@@ -126,17 +126,16 @@
 
       <section class="gallery">
         <h3 class="main__subtitle title-decor">А можно в картинках?</h3>
-        <img class="gallery-image gallery-image_sunset" src="./images/sunset.png" alt="sunset" loading="lazy">
-        <img class="gallery-image gallery-image_ice-cream" src="./images/ice-cream.png" alt="ice-cream" loading="lazy">
-        <img class="gallery-image gallery-image_tape" src="./images/tape.png" alt="tape" loading="lazy">
-        <img class="gallery-image gallery-image_books" src="./images/books.png" alt="books" loading="lazy">
-        <img class="gallery-image gallery-image_street" src="./images/street.png" alt="street" loading="lazy">
+        <img class="gallery-image gallery-image_sunset" src="./images/sunset.png" alt="Закат" loading="lazy">
+        <img class="gallery-image gallery-image_ice-cream" src="./images/ice-cream.png" alt="Мороженное" loading="lazy">
+        <img class="gallery-image gallery-image_tape" src="./images/tape.png" alt="Кассета" loading="lazy">
+        <img class="gallery-image gallery-image_books" src="./images/books.png" alt="Книга" loading="lazy">
+        <img class="gallery-image gallery-image_street" src="./images/street.png" alt="Улица" loading="lazy">
       </section>
       
     </main>
 
-    <footer class="footer">
-      <div class="footer-decorated-zone"></div>
+    <footer class="footer decorated-zone">
       <h2 class="title">focus</h2>
     </footer>
   </body>
